overflow fixed & v2 service

--- a/_sass/components/_page.scss
+++ b/_sass/components/_page.scss
@@ -49,11 +49,10 @@
 .section-content{
   // display: grid;
   // grid-template-columns: repeat(2, minmax(0, 1fr));
-  border: 1px solid rgba(186, 186, 186, 0.27);
   .intro-content{
     height: 100%;
     padding: 1rem 1.5em;  
-    background-color: #2f2f2f;
+    background-color: #ffffff;
     text-align: start;
     display: flex;
     flex-direction: column ;    
@@ -61,9 +60,10 @@
     h1 {
       font-size: 38px !important;
       margin: 0;
+     color: #202020e1
     }   
     p{
-      color: #e8f5ff;
+      color: #565656;
     }
   }
   .ctas-list{
@@ -95,39 +95,49 @@
 section{
 .consulting-container{
   .strip{
-    background-color: #2a2a2a;
+    background-color: #ffffff;
     padding: 0;
+    display: flex;
+    align-items: center ;
+    
     .service-title  {
+      text-transform: none;
       font-size: 24px !important;
       a{
-      color: white;
+      color: rgba(32, 32, 32, 0.881);
       font-size: 16     px;
       }
-    }  
+    }     
     p{
-      color: white;
+      color: #565656;
     }           
   } 
   .content-list-item{
+      padding-top: 0 !important;
       padding-bottom: 0 !important;
     ul {
+       padding: 0;
        margin: 0; 
-       display: grid;
+       display: grid !important;
        @include media-breakpoint-up(md){
         grid-template-columns: repeat(2, minmax(0, 1fr));
       }
       li{
-        @include media-breakpoint-down(sm){
-          width: 100%;
-        }
+        width: 100%;
+        // @include media-breakpoint-down(sm){
+        //   width: 100%;
+        // }
         
         .feature-card{  
-          min-height: 146px;
+          min-height: 186px;
         }
+        border-radius: 12px;
+        border: 1px solid #81B94C;
         padding: 15px 20px;
-        background: #252525 !important;
+        background: inherit !important;
         
         h2{
+          text-transform: none;
           font-size: 18px !important;
         }
       }
